2022-05-22 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Pause demo playback when menu open
	* [Client Demo] Don't timeout during demo pause
	* [Engine] Fix client defaulting to onboard graphics on laptops with discrete GPUs.
    * [Cumulative Update] Misc changes
	
2022-05-15 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Don't test fullscreen with glconfig.isFullscreen
	
2022-05-14 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Updated .github workflows
	* [Misc] Updated README.md file

2022-05-12 Dusan Jocic <dusanjocic@msn.com>
	* [Misc] Updated copyright year and added supported compiler

2022-05-10 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Fixed compiling on the Windows platform
	* [Community Server] Fixed compiling on the macOS platform
	
2022-05-08 Dusan Jocic <dusanjocic@msn.com>
	* [cMake] Updated CMakeLists.txt
	* [Authentication Server] Fixed compiling Authentication server on the MacOS platform
	* [Master Server] Fixed compiling master server the MacOS platform
	* [SoundSystem] Fixed compiling OpenAL subsystem on the MacOS platform
	* [cMake] Removed /Wno-dev flag
	* [Server] Fixed compiling dedicated server on the MacOS platform
	* [AutoUpdate Server] Fixed compiling autoupdate server on the MacOS Platform
	* [Engine] Fixed compiling engine on the MacOS platform

2022-04-30 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Fix a flexible array member of size 4
	* [cMake] Experimenting with cmake.yml

2022-01-09 Dusan Jocic <dusanjocic@msn.com>
	* [Client] Fixed a bug with creating and sending the command packet after playing cinematics video

2021-11-21 Dusan Jocic <dusanjocic@msn.com>
	* [SoundSystem] Fixed crash if "s_initsound" console variable is 0

2021-08-31 Dusan Jocic <dusanjocic@msn.com>
	* [RenderSystem] Changed default values of few convars
	* [RenderSystem] Changed default values of renderer convars

2021-08-29 Dusan Jocic <dusanjocic@msn.com>
	* [Cumulative Update] Misc changes

2021-08-28 Dusan Jocic <dusanjocic@msn.com>